fix: adjust z-index for hologram and gesture area during rotation

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -119,7 +119,6 @@ body {
 #gesture-area {
   position: relative;
   height: 25%;
-  z-index: 0;
   width: 70%;
   margin: 5px auto;
   background-color: black;
@@ -396,13 +395,14 @@ body {
 #grid-container {
   position: relative;
   height: 75%;
-  z-index: 1;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 #grid-container canvas {
+  position: relative;
+  z-index: 1;
   display: block;
   max-width: 100%;
   max-height: 100%;
